xboxdrv 0.6.0 - (??/Aug/2010)
==============================

* support for reading from evdev, this allows the use of regular
  regular PC joysticks or the Playstation 3 controller with xboxdrv,
  useful if you need configurability or joy2key-like functionality,
  but don't have a Xbox360 gamepad
* added KEY_#num, ABS_#num and REL_#num to allow refering to events by
  number instead of name
* support for reading configuration from a config file
* cleaned up uinput mapping, --dpad-as-button, --dpad-only, etc. are now
  simple mappings instead of special case hackery
* --ui-axismap and --ui-buttonmap now work with all axis and button
* Saitek Cyborg Rumble Pad support added
* Gamestop Xbox 360 Controller support added
* smooth deadzone handling without jumps 
* added --detach-kernel-driver
* automatically insert dummy events to make input device register as joystick
* added ability to have multiple configs running at the same time with --ui-new


xboxdrv 0.5.0 - (26/May/2010)
==============================

* added device_id handling to --ui-buttonmap and --ui-axismap, allows
  the creation of multiple input devices from a single controller
* added shifting to --ui-buttonmap, allows sending of different events
  when a shift button is pressed
* added support to send keyboard combination from --ui-buttonmap
* added --mouse, a simple shortcut to enable mouse emulation
* added dummy events to the mouse device to let it register properly
  by the kernel without messing with hal
* auto-detect USB endpoints on Xbox1 controller


xboxdrv 0.4.13 - (13/May/2010)
==============================

* added --mimic-xpad
* added --no-extra-devices


xboxdrv 0.4.12 - (08/May/2010)
==============================

* added --four-way-restrictor
* added --dpad-rotation
* added proper man pages for xboxdrv and xboxdrv-daemon


xboxdrv 0.4.11 - (01/May/2010)
==============================

* added --axis-sensitivity
* added number aliases for button names