@@ -1,4 +1,4 @@
-xboxdrv 0.6.0 - (??/Aug/2010)
+xboxdrv 0.6.0 - (??/Dec/2010)
 ==============================
 
 * support for reading from evdev, this allows the use of regular
@@ -17,6 +17,8 @@ xboxdrv 0.6.0 - (??/Aug/2010)
 * added --detach-kernel-driver
 * automatically insert dummy events to make input device register as joystick
 * added ability to have multiple configs running at the same time with --ui-new
+* added shifting to --ui-axismap, allows sending of different events
+  when a shift button is pressed
 
 
 xboxdrv 0.5.0 - (26/May/2010)
